--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.h2.console.enabled=true
 spring.datasource.platform=h2
 spring.datasource.url=jdbc:h2:mem:user;DB_CLOSE_ON_EXIT=FALSE;
+spring.datasource.initialization-mode=always
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.data=classpath:data.sql
